@@ -161,13 +161,14 @@
 
     .Footer{
         border: 0px;
-        font-size: 10px;
+        font-size: 15px;
         color: #717171;
-        
+        padding: 30px;
     }
     #Footer_row_1{
         font-weight: bold;
-        font-size: 15px;
+        font-size: 20px;
+        text-align: center;
     }
 </style>
     <title>fragrance-keebs</title>
